--- a/app/src/main/res/layout/fra_coupon.xml
+++ b/app/src/main/res/layout/fra_coupon.xml
@@ -20,16 +20,16 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="62dp"
+                android:layout_height="wrap_content"
                 android:gravity="right"
-                android:layout_marginRight="11dp"
+                android:layout_marginRight="22dp"
                 android:orientation="vertical"
                 >
                 <TextView
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="9sp"
+                    android:textSize="18sp"
                     android:textColor="#c2c2c2"
                     android:letterSpacing="-0.08"
                     android:lineSpacingExtra="1sp"
@@ -45,7 +45,7 @@
                     android:layout_marginTop="8.5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="27sp"
+                    android:textSize="54sp"
                     android:textColor="#0066b0"
                     android:letterSpacing="-0.03"
                     android:lineSpacingExtra="8sp"
@@ -56,7 +56,7 @@
                         android:layout_marginTop="8.5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="27sp"
+                        android:textSize="54sp"
                         android:textColor="#0066b0"
                         android:letterSpacing="-0.03"
                         android:lineSpacingExtra="8sp"
@@ -92,7 +92,7 @@
                             android:lineSpacingExtra="-15sp"
                             android:text="1"
                             android:textColor="#666666"
-                            android:textSize="24sp" />
+                            android:textSize="48sp" />
 
                     </LinearLayout>
                     <LinearLayout
@@ -105,7 +105,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="24sp"
+                            android:textSize="48sp"
                             android:textColor="#666666"
                             android:letterSpacing="-0.05"
                             android:lineSpacingExtra="-15sp"
@@ -123,7 +123,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="24sp"
+                            android:textSize="48sp"
                             android:textColor="#666666"
                             android:letterSpacing="-0.05"
                             android:lineSpacingExtra="-15sp"
@@ -153,7 +153,7 @@
                             android:lineSpacingExtra="-15sp"
                             android:text="4"
                             android:textColor="#666666"
-                            android:textSize="24sp" />
+                            android:textSize="48sp" />
 
                     </LinearLayout>
                     <LinearLayout
@@ -166,7 +166,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="24sp"
+                            android:textSize="48sp"
                             android:textColor="#666666"
                             android:letterSpacing="-0.05"
                             android:lineSpacingExtra="-15sp"
@@ -190,7 +190,7 @@
                             android:lineSpacingExtra="-15sp"
                             android:text="6"
                             android:textColor="#666666"
-                            android:textSize="24sp" />
+                            android:textSize="48sp" />
 
                     </LinearLayout>
 
@@ -209,7 +209,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="24sp"
+                            android:textSize="48sp"
                             android:textColor="#666666"
                             android:letterSpacing="-0.05"
                             android:lineSpacingExtra="-15sp"
@@ -227,7 +227,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="24sp"
+                            android:textSize="48sp"
                             android:textColor="#666666"
                             android:letterSpacing="-0.05"
                             android:lineSpacingExtra="-15sp"
@@ -245,7 +245,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="24sp"
+                            android:textSize="48sp"
                             android:textColor="#666666"
                             android:letterSpacing="-0.05"
                             android:lineSpacingExtra="-15sp"
@@ -268,8 +268,8 @@
                         android:gravity="center"
                         android:layout_height="match_parent">
                         <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="60dp"
+                            android:layout_height="55dp"
                             android:src="@mipmap/btn_del"
                             />
 
@@ -284,7 +284,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="24sp"
+                            android:textSize="48sp"
                             android:textColor="#666666"
                             android:letterSpacing="-0.05"
                             android:lineSpacingExtra="-15sp"
@@ -303,7 +303,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="21sp"
+                            android:textSize="42sp"
                             android:textColor="#ffffff"
                             android:letterSpacing="-0.05"
                             android:lineSpacingExtra="-12sp"
@@ -328,7 +328,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="9.5dp"
                 android:orientation="vertical"
                 android:background="#ffff">
@@ -336,7 +336,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="8sp"
+                    android:textSize="16sp"
                     android:layout_marginLeft="10dp"
                     android:textColor="#cbcbcb"
                     android:letterSpacing="-0.05"
@@ -353,8 +353,8 @@
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:layout_marginLeft="10dp"
+                    android:textSize="36sp"
+                    android:layout_marginLeft="20dp"
                     android:textColor="#303030"
                     android:letterSpacing="-0.05"
                     android:lineSpacingExtra="-9sp"
@@ -364,7 +364,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="18sp"
+                        android:textSize="36sp"
                         android:textColor="#303030"
                         android:letterSpacing="-0.05"
                         android:lineSpacingExtra="-9sp"
@@ -374,14 +374,14 @@
                 <View
                     android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="0.3dp"
+                    android:layout_height="0.6dp"
                     android:background="#e1e1e1"/>
                 <TextView
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="8sp"
-                    android:layout_marginLeft="10dp"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="20dp"
                     android:textColor="#cbcbcb"
                     android:letterSpacing="-0.05"
                     android:lineSpacingExtra="1sp"
@@ -396,8 +396,8 @@
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:layout_marginLeft="10dp"
+                    android:textSize="36sp"
+                    android:layout_marginLeft="20dp"
                     android:textColor="#666666"
                     android:letterSpacing="-0.05"
                     android:lineSpacingExtra="-9sp"
@@ -407,7 +407,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="18sp"
+                        android:textSize="36sp"
                         android:textColor="#666666"
                         android:letterSpacing="-0.05"
                         android:lineSpacingExtra="-9sp"
