--- a/app/src/main/res/layout/item_member_coupon.xml
+++ b/app/src/main/res/layout/item_member_coupon.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="135dp"
-    android:layout_height="45dp" android:padding="5dp" android:layout_margin="5dp" >
+    android:orientation="vertical" android:layout_width="270dp"
+    android:layout_height="90dp" android:padding="10dp">
 
     <TextView
         android:id="@+id/item_couponClicked"
@@ -21,11 +21,11 @@
             android:id="@+id/item_couponNameTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="3.5dp"
-            android:layout_marginRight="5dp"
-            android:lineSpacingExtra="3sp"
+            android:layout_marginBottom="7dp"
+            android:layout_marginRight="10dp"
+            android:lineSpacingExtra="6sp"
             android:layout_gravity="right"
-            android:textSize="9sp"
+            android:textSize="18sp"
             android:textColor="#333333"
             android:text="쿠폰이름"
             android:textStyle="bold" />
@@ -34,13 +34,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginBottom="3dp"
-            android:layout_marginRight="5dp">
+            android:layout_marginBottom="6dp"
+            android:layout_marginRight="10dp">
             <TextView
                 android:id="@+id/item_s_validityTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="7sp"
+                android:textSize="14sp"
                 android:textColor="#595959"
                 android:letterSpacing="-0.2"
                 android:text="2018-11-29"/>
@@ -49,13 +49,13 @@
                 android:layout_height="wrap_content"
                 android:text=" ~ "
                 android:textColor="#595959"
-                android:textSize="7sp"
+                android:textSize="14sp"
                 android:letterSpacing="-0.02"/>
             <TextView
                 android:id="@+id/item_e_validityTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="7sp"
+                android:textSize="14sp"
                 android:letterSpacing="-0.02"
                 android:textColor="#595959"
                 android:text="2018-12-31"/>
@@ -64,20 +64,20 @@
             android:id="@+id/item_messageTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="10dp"
             android:layout_gravity="right"
-            android:textSize="6sp"
+            android:textSize="12sp"
             android:textColor="#595959"
             android:text="메세지"
             android:visibility="gone"/>
         <EditText
             android:id="@+id/item_contentET"
-            android:layout_width="100dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:layout_gravity="right"
-            android:layout_marginRight="5dp"
-            android:textSize="6sp"
+            android:layout_marginRight="10dp"
+            android:textSize="12sp"
             android:textColor="#595959"
             android:background="@null"/>
     </LinearLayout>
