--- a/app/src/main/res/layout/spiner_item.xml
+++ b/app/src/main/res/layout/spiner_item.xml
@@ -4,9 +4,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="8sp"
+    android:textSize="20sp"
     android:textColor="#666666"
     android:letterSpacing="-0.03"
-    android:lineSpacingExtra="4sp"
+    android:lineSpacingExtra="8sp"
+    android:layout_margin="5dp"
     android:text="전체"
     />
