--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,14 +41,16 @@
                 android:layout_weight="0.15"
                 android:background="#313131"
                 android:gravity="center"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:visibility="gone">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:textColor="#ffffff"
                     android:lineSpacingExtra="4.5sp"
-                    android:text="사용/조회" />
+                    android:text="사용/조회"
+                    android:textColor="#ffffff"
+                    android:textSize="14sp" />
             </LinearLayout>
 
 
