--- a/app/src/main/res/layout/item_member_coupon.xml
+++ b/app/src/main/res/layout/item_member_coupon.xml
@@ -16,8 +16,8 @@
 
     <LinearLayout
         android:id="@+id/LL"
-        android:layout_width="135dp"
-        android:layout_height="45dp"
+        android:layout_width="270dp"
+        android:layout_height="90dp"
         android:padding="5dp"
         android:layout_margin="5dp" >
 
@@ -34,7 +34,7 @@
                 android:layout_marginRight="5dp"
                 android:lineSpacingExtra="3sp"
                 android:layout_gravity="right"
-                android:textSize="9sp"
+                android:textSize="18dp"
                 android:textColor="#333333"
                 android:text="쿠폰이름"
                 android:textStyle="bold" />
@@ -50,7 +50,7 @@
                     android:id="@+id/item_s_validityTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="7sp"
+                    android:textSize="14dp"
                     android:textColor="#595959"
                     android:letterSpacing="-0.2"
                     android:text="2018-11-29"/>
@@ -59,13 +59,13 @@
                     android:layout_height="wrap_content"
                     android:text=" ~ "
                     android:textColor="#595959"
-                    android:textSize="7sp"
+                    android:textSize="14dp"
                     android:letterSpacing="-0.02"/>
                 <TextView
                     android:id="@+id/item_e_validityTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="7sp"
+                    android:textSize="14dp"
                     android:letterSpacing="-0.02"
                     android:textColor="#595959"
                     android:text="2018-12-31"/>
