--- a/app/src/main/res/layout/fra_use.xml
+++ b/app/src/main/res/layout/fra_use.xml
@@ -447,6 +447,7 @@
                 </LinearLayout>
 
                 <ListView
+                    android:layout_marginTop="10dp"
                     android:id="@+id/couponListLV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
