--- a/app/src/main/res/layout/fra_use.xml
+++ b/app/src/main/res/layout/fra_use.xml
@@ -285,6 +285,7 @@
                         android:background="#00d1ce"
                         android:layout_height="match_parent">
                         <TextView
+                            android:id="@+id/typeTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="42sp"
