--- a/app/src/main/res/layout/activity_coupon_use.xml
+++ b/app/src/main/res/layout/activity_coupon_use.xml
@@ -76,7 +76,7 @@
                     android:textSize="20dp"
                     android:textColor="#ffffff"
                     android:lineSpacingExtra="25sp"
-                    android:text="사용/조회"
+                    android:text=""
                     />
 
             </LinearLayout>
@@ -93,7 +93,7 @@
                     android:textSize="20dp"
                     android:textColor="#ffffff"
                     android:lineSpacingExtra="25sp"
-                    android:text="쿠폰/포인트 조회"
+                    android:text=""
                     />
 
             </LinearLayout>
