--- a/app/src/main/res/layout/fra_use.xml
+++ b/app/src/main/res/layout/fra_use.xml
@@ -36,6 +36,7 @@
                     android:text=""
                     />
                 <TextView
+                    android:id="@+id/noticeTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
