--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,107 +2,114 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:theme="@style/NoTitleDialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@mipmap/background_login"
     tools:context=".activities.LoginActivity">
 
-    <LinearLayout
-        android:layout_width="420dp"
-        android:layout_height="600dp"
-        android:layout_marginTop="62dp"
-        android:layout_marginRight="70dp"
-        android:layout_gravity="right"
-        android:background="#ffffff"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="360dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="140dp">
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="32dp"
-                android:layout_marginLeft="7dp"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/login_id_img"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="22dp"
-                android:textSize="16sp"
-                android:textColor="#909090"
-                android:text="아이디"/>
-            <EditText
-                android:id="@+id/loginIdET"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="30dp"
-                android:textSize="18sp"
-                android:background="@null"/>
-        </LinearLayout>
-        <View
-            android:layout_width="360dp"
-            android:layout_height="0.5dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:background="#e7e7e7"/>
+
+
+    <com.devstories.aninuriandroid.base.RationalRelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:ratio="2560:1600">
 
         <LinearLayout
-            android:layout_width="360dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="30dp">
-            <ImageView
-                android:layout_width="25sp"
-                android:layout_height="32dp"
-                android:layout_marginLeft="7dp"
-                android:src="@mipmap/login_pass_img"/>
-            <TextView
-                android:layout_width="wrap_content"
+            android:layout_width="210dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="31dp"
+            android:layout_marginRight="34dp"
+            android:layout_gravity="right"
+            android:background="#ffffff"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="22dp"
-                android:textSize="16sp"
-                android:textColor="#909090"
-                android:text="비밀번호"/>
-            <EditText
-                android:id="@+id/loginPassTV"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="16dp"
-                android:textSize="18sp"
-                android:inputType="textPassword"
-                android:background="@null"/>
-        </LinearLayout>
-        <View
-            android:layout_width="360dp"
-            android:layout_height="1dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:background="#e7e7e7"/>
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="70dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3.5dp"
+                    android:src="@mipmap/layer_4"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="11dp"
+                    android:textSize="8sp"
+                    android:textColor="#909090"
+                    android:text="아이디"/>
+                <EditText
+                    android:id="@+id/loginIdET"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
+                    android:textSize="9sp"
+                    android:background="@null"
+                    android:singleLine="true"/>
+            </LinearLayout>
+            <View
+                android:layout_width="180dp"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:background="#e7e7e7"/>
 
-        <LinearLayout
-            android:id="@+id/loginLL"
-            android:layout_width="360dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="31dp"
-            android:layout_marginTop="40dp"
-            android:background="#0871bf"
-            android:gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:text="로그인"/>
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="15dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3.5dp"
+                    android:src="@mipmap/layer_5"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="11dp"
+                    android:textSize="8sp"
+                    android:textColor="#909090"
+                    android:text="비밀번호"/>
+                <EditText
+                    android:id="@+id/loginPassTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="9sp"
+                    android:inputType="textPassword"
+                    android:background="@null"
+                    android:singleLine="true"/>
+            </LinearLayout>
+            <View
+                android:layout_width="180dp"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:background="#e7e7e7"/>
+
+            <LinearLayout
+                android:id="@+id/loginLL"
+                android:layout_width="180dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="15.5dp"
+                android:layout_marginTop="20dp"
+                android:background="#0871bf"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="10sp"
+                    android:textColor="#ffffff"
+                    android:text="로그인"/>
+            </LinearLayout>
+
         </LinearLayout>
-
-    </LinearLayout>
-
+    </com.devstories.aninuriandroid.base.RationalRelativeLayout>
 </LinearLayout>
