--- a/app/src/main/res/layout/fra_use.xml
+++ b/app/src/main/res/layout/fra_use.xml
@@ -306,84 +306,86 @@
 
 
         </LinearLayout>
+
+
         <LinearLayout
-            android:layout_marginLeft="25dp"
             android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="25dp"
             android:layout_weight="0.5"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+            android:orientation="vertical">
 
             <LinearLayout
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
+                android:background="#ffff"
                 android:gravity="center_vertical"
-                android:background="#ffff">
+                android:visibility="gone">
+
                 <TextView
                     android:id="@+id/save_pointTV"
-                    android:layout_marginLeft="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40sp"
-                    android:textColor="#0066b0"
+                    android:layout_marginLeft="20dp"
                     android:letterSpacing="-0.05"
                     android:lineSpacingExtra="-11sp"
                     android:text="100"
-                    />
+                    android:textColor="#0066b0"
+                    android:textSize="40sp" />
+
                 <TextView
-                    android:layout_marginLeft="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40sp"
-                    android:textColor="#0066b0"
+                    android:layout_marginLeft="20dp"
                     android:letterSpacing="-0.05"
                     android:lineSpacingExtra="-11sp"
                     android:text="P "
-                    />
+                    android:textColor="#0066b0"
+                    android:textSize="40sp" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40sp"
-                    android:textColor="#666666"
                     android:letterSpacing="-0.05"
                     android:lineSpacingExtra="-11sp"
                     android:text="적립"
-                    />
+                    android:textColor="#666666"
+                    android:textSize="40sp" />
             </LinearLayout>
 
             <RelativeLayout
-                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
-                android:background="#f3f3f3"
-                android:layout_height="120dp">
+                android:layout_height="130dp"
+                android:layout_marginTop="20dp"
+                android:background="#f3f3f3">
 
                 <ImageView
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
                     android:layout_width="50dp"
                     android:layout_height="40sp"
-                    android:src="@mipmap/bubble_katalk"/>
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:src="@mipmap/bubble_katalk" />
+
                 <ImageView
-                    android:layout_marginTop="23dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_width="100dp"
                     android:layout_height="25dp"
-                    android:src="@mipmap/t_kakao"/>
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="23dp"
+                    android:src="@mipmap/t_kakao" />
 
                 <TextView
-                    android:layout_alignParentBottom="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="19dp"
+                    android:layout_alignParentBottom="true"
                     android:layout_marginBottom="24dp"
-                    android:textSize="14sp"
-                    android:textColor="#2a2a2a"
+                    android:layout_marginLeft="19dp"
+                    android:layout_marginTop="20dp"
                     android:letterSpacing="-0.05"
                     android:lineSpacingExtra="2sp"
                     android:text="입력하신 휴대전화번호로 매장의
 카카오톡 알림톡이 전송됩니다."
-                    />
+                    android:textColor="#2a2a2a"
+                    android:textSize="14sp" />
 
 
             </RelativeLayout>
@@ -398,11 +400,11 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:orientation="vertical"
                     android:background="#ffff"
+                    android:orientation="vertical"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
                     android:visibility="visible">
 
                     <TextView
@@ -422,44 +424,41 @@
 
                         <TextView
                             android:id="@+id/pointTV"
-                            android:layout_marginTop="10dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="36dp"
                             android:layout_marginLeft="10dp"
-                            android:textColor="#303030"
+                            android:layout_marginTop="10dp"
                             android:letterSpacing="-0.05"
                             android:lineSpacingExtra="-9sp"
                             android:text="0"
-                            />
+                            android:textColor="#303030"
+                            android:textSize="36dp" />
 
                         <TextView
-                            android:layout_marginTop="10dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="36dp"
-                            android:textColor="#303030"
+                            android:layout_marginTop="10dp"
                             android:letterSpacing="-0.05"
                             android:lineSpacingExtra="-9sp"
                             android:text="P"
-                            />
+                            android:textColor="#303030"
+                            android:textSize="36dp" />
 
                     </LinearLayout>
 
                 </LinearLayout>
 
                 <ListView
-                    android:layout_marginTop="10dp"
                     android:id="@+id/couponListLV"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
 
                 </ListView>
 
             </LinearLayout>
 
         </LinearLayout>
-
     </LinearLayout>
 
 </LinearLayout>
