--- a/app/src/main/res/layout/fra_point_accumulate.xml
+++ b/app/src/main/res/layout/fra_point_accumulate.xml
@@ -10,11 +10,11 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:background="#ffff"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:background="#ffff"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -84,7 +84,8 @@
         <LinearLayout
             android:background="#ffff"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="0dp"
+            android:layout_weight="0.3"
             android:orientation="horizontal">
 
             <ImageView
@@ -109,21 +110,33 @@
                 <LinearLayout
                     android:id="@+id/useLL"
                     android:layout_marginTop="15dp"
-                    android:layout_width="380dp"
-                    android:gravity="center"
-                    android:background="#bbbbbb"
+                    android:layout_width="match_parent"
+                    android:gravity="center_vertical|left"
                     android:layout_height="60dp">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_weight="0.5"
+                        android:layout_height="match_parent"
                         android:textSize="32sp"
+                        android:gravity="center"
+                        android:background="#bbbbbb"
                         android:textColor="#ffffff"
                         android:letterSpacing="-0.05"
                         android:lineSpacingExtra="-6sp"
                         android:text="포인트 사용하기"
                         />
 
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:textSize="32sp"
+                        android:gravity="center"
+                        android:letterSpacing="-0.05"
+                        android:lineSpacingExtra="-6sp"
+
+                        />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
