--- a/app/src/main/res/layout/activity_coupon_use.xml
+++ b/app/src/main/res/layout/activity_coupon_use.xml
@@ -20,12 +20,14 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_marginLeft="34dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_height="match_parent"
             android:layout_marginTop="87dp"
             android:orientation="vertical">
 
-            <TextView
+            <me.grantland.widget.AutofitTextView
+                android:maxLines="2"
                 android:id="@+id/titleTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-            <TextView
+              <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="33dp"
@@ -64,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_weight="0.8"
         android:layout_height="match_parent"
-        android:layout_marginRight="19dp"
+        android:layout_marginRight="20dp"
         android:orientation="vertical">
         
         <LinearLayout
