--- a/app/src/main/res/layout/activity_coupon_use.xml
+++ b/app/src/main/res/layout/activity_coupon_use.xml
@@ -10,6 +10,8 @@
 
 
     <LinearLayout
+        android:id="@+id/titleLL"
+        android:visibility="visible"
         android:layout_width="0dp"
         android:layout_weight="0.3"
         android:layout_height="match_parent"
@@ -62,14 +64,17 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="32dp"
+        android:id="@+id/mainLL"
         android:layout_width="0dp"
         android:layout_weight="0.8"
         android:layout_height="match_parent"
-        android:layout_marginRight="20dp"
         android:orientation="vertical">
-        
+        <!--android:layout_marginRight="20dp"-->
+
         <LinearLayout
+            android:id="@+id/usetitle_op_LL"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="19dp"
             android:layout_marginLeft="35dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -144,7 +149,6 @@
         </LinearLayout>
         <FrameLayout
             android:id="@+id/main_frame"
-            android:layout_marginTop="19dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
            />
