--- a/app/src/main/res/layout/fra_coupon.xml
+++ b/app/src/main/res/layout/fra_coupon.xml
@@ -321,6 +321,7 @@
         </LinearLayout>
         <LinearLayout
             android:layout_marginLeft="25dp"
+            android:layout_marginRight="20dp"
             android:layout_width="0dp"
             android:layout_weight="0.5"
             android:orientation="vertical"
