--- a/app/src/main/res/layout/fra_coupon.xml
+++ b/app/src/main/res/layout/fra_coupon.xml
@@ -65,6 +65,18 @@
                         android:text="P"
                         />
                 </LinearLayout>
+                <TextView
+                    android:id="@+id/use_point_unitTV"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textColor="#c2c2c2"
+                    android:letterSpacing="-0.08"
+                    android:lineSpacingExtra="1sp"
+                    android:gravity="center_horizontal"
+                    android:text="포인트사용단위는 500P입니다."
+                    />
             </LinearLayout>
 
             <LinearLayout
