--- a/app/src/main/res/layout/fra_point_accumulate.xml
+++ b/app/src/main/res/layout/fra_point_accumulate.xml
@@ -17,6 +17,32 @@
             android:gravity="center"
             android:orientation="vertical">
 
+
+            <TextView
+                android:id="@+id/stack_pointTV"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:letterSpacing="-0.01"
+                android:lineSpacingExtra="-40sp"
+                android:text="100P"
+                android:textColor="#0078ce"
+                android:textSize="100dp" />
+
+            <TextView
+                android:id="@+id/stack_titleTV"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:letterSpacing="-0.03"
+                android:lineSpacingExtra="-16sp"
+                android:text="적립"
+                android:textColor="#676767"
+                android:textSize="51dp" />
+
+
             <TextView
                 android:id="@+id/pointTV"
                 android:layout_width="wrap_content"
