--- a/app/src/main/res/layout/activity_coupon_use.xml
+++ b/app/src/main/res/layout/activity_coupon_use.xml
@@ -11,13 +11,11 @@
 
     <LinearLayout
         android:id="@+id/titleLL"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:layout_width="0dp"
-        android:layout_weight="0.3"
+        android:layout_weight="0.2"
         android:layout_height="match_parent"
         android:orientation="horizontal">
-
-
 
         <LinearLayout
             android:layout_width="0dp"
