--- a/app/src/main/res/layout/fra_use.xml
+++ b/app/src/main/res/layout/fra_use.xml
@@ -2,7 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/background_gradient">
 
     <LinearLayout
         android:layout_marginTop="19dp"
@@ -315,6 +316,15 @@
             android:layout_marginLeft="25dp"
             android:layout_weight="0.5"
             android:orientation="vertical">
+
+            <me.grantland.widget.AutofitTextView
+                android:maxLines="2"
+                android:id="@+id/fraTitleTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="포인트 적립"
+                android:textColor="#fff"
+                android:textSize="48dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
