--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,15 @@
         android:layout_height="80dp"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/logoutTV"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:background="#e83363"
+            android:gravity="center"
+            android:text="로그아웃"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+        <TextView
             android:id="@+id/storeNameTV"
             android:gravity="center"
             android:layout_width="0dp"
