--- a/app/src/main/res/layout/fra_coupon.xml
+++ b/app/src/main/res/layout/fra_coupon.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="9.5dp"
-        android:layout_marginBottom="6dp"
+        android:layout_marginLeft="9.5dp"
+        android:layout_marginBottom="9.5dp"
         android:orientation="horizontal">
 
         <LinearLayout
