--- a/app/src/main/res/layout/activity_coupon_use.xml
+++ b/app/src/main/res/layout/activity_coupon_use.xml
@@ -60,7 +60,6 @@
 
 
     </LinearLayout>
-
     <LinearLayout
         android:id="@+id/mainLL"
         android:layout_width="0dp"
@@ -146,6 +145,32 @@
 
 
         </LinearLayout>
+        <RelativeLayout
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="9.5dp"
+            android:layout_marginLeft="9.5dp"
+            android:id="@+id/title2LL"
+            android:layout_width="match_parent"
+            android:layout_height="61dp"
+            android:background="#90000000"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/phoneTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center_horizontal"
+                android:lineSpacingExtra="25sp"
+                android:text="휴대폰 번호를 입력해주세요."
+                android:textColor="#90ffffff"
+                android:textSize="20dp" />
+
+
+
+        </RelativeLayout>
+
         <FrameLayout
             android:id="@+id/main_frame"
             android:layout_width="match_parent"
