--- a/app/src/main/res/layout/fra_use.xml
+++ b/app/src/main/res/layout/fra_use.xml
@@ -316,14 +316,15 @@
             android:layout_weight="0.5"
             android:orientation="vertical">
 
-      <!--      <me.grantland.widget.AutofitTextView
+            <me.grantland.widget.AutofitTextView
                 android:maxLines="2"
                 android:id="@+id/fraTitleTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="포인트 적립"
+                android:layout_marginBottom="20dp"
                 android:textColor="#fff"
-                android:textSize="48dp" />-->
+                android:textSize="48dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
